--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
             <h2>店長</h2>
             <div class="row">
               <div class="col-md-4">
-                <img src="C:\Users\a4331\OneDrive\桌面\simple-website\2.jpg">
+                <img src="2.jpg">
                 <h3>Aralia1112</h3>
               </div>
               <div class="col-md-8 text-left">
@@ -80,6 +80,9 @@
           </div>
         </div>
       </div>
+
+
+
     </section>
     <section id="list-group">
       <div class="containter">
@@ -98,6 +101,7 @@
       </div>
     </section>
 
+    
     
     <section id="contact information">
       <div class="containter">
@@ -126,6 +130,7 @@
             <ul>捷運</ul>
             <ul>公車</ul>
             <ul>汽機車</ul>
+            <p1>地圖</p1>
           </div>
         </div>
       </div>
