--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="news">News</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="Restaurant_Introduction.html">About</a>
+                </li>
               </ul>
               <!--search box-->
               <form class="d-flex">
