--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   <a class="nav-link" href="Restaurant_Introduction.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="menu">Menu</a>
+                  <a class="nav-link" href="index.html">Menu</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="news">News</a>
@@ -44,7 +44,7 @@
     <p></p>
     <div class="dropdown d-grid">
       <button type="button" class="btn btn-outline-info dropdown-toggle" data-bs-toggle="dropdown">
-        Dropdown button
+        ~按此直達食物分類~
       </button>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="#steamed">蒸點</a></li>
