--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                   <a class="nav-link" href="index.html">Menu</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="news">News</a>
-                </li>
-                <li class="nav-item">
                   <a class="nav-link" href="Restaurant_Introduction.html">About</a>
+                </li>
+		<li class="nav-item">
+                  <a class="nav-link" href="contact.html">News&Contact</a>
                 </li>
               </ul>
               <!--search box-->
