--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
                   <a class="nav-link" href="Restaurant_Introduction.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Menu</a>
+                  <a class="nav-link" href="menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="Restaurant_Introduction.html">About</a>
