--- a/Restaurant_Introduction.html
+++ b/Restaurant_Introduction.html
@@ -22,7 +22,7 @@
                     <a class="nav-link ms-5" href="javascript:void(0)">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link ms-1" href="index.html">Menu</a>
+                    <a class="nav-link ms-1" href="menu.html">Menu</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link ms-1" href="javascript:void(0)">About</a>
