--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                   <a class="nav-link ms-1" href="javascript:void(0)">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link ms-1" href="index.html">Menu</a>
+                  <a class="nav-link ms-1" href="menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link ms-1" href="javascript:void(0)">About</a>
