--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                   <a class="nav-link ms-1" href="menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link ms-1" href="javascript:void(0)">About</a>
+                  <a class="nav-link ms-1" href="Restaurant_Introduction.html">About</a>
                 </li>
                   <a class="nav-link ms-1" href="contact.html">News&Contact</a>
                 </li>
