--- a/menu.html
+++ b/menu.html
@@ -90,53 +90,34 @@
   		  </button>
         </div>
       </div>
-      <!--糯米雞-->
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1pqkKVLfZbK2s7KX-N3DIbMaet3uWFHYH" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">糯米雞&nbsp&nbsp$138</h5>
-          <p class="card-text">Steamed Chicken Rice with LotusLeaf Wrap</p>
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_4">
-    See Detail
-  		  </button>
-        </div>
-      </div>
-      <!--腸粉-->
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1usKlcNSa8rAT2MQfGCHh8ZLERem1NubV" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">鮮蝦腸粉&nbsp&nbsp$118</h5>
-          <p class="card-text">Steamed Rice Rolls with Shrimp</p>
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_5">
-    See Detail
-  		  </button>
-        </div>
+    </div>
+    <div class="card-type-center">
+      <div class="card-group" style="width:1300px">
+        <!--糯米雞-->
+        <div class="card">
+	  <img src="https://drive.google.com/uc?id=1pqkKVLfZbK2s7KX-N3DIbMaet3uWFHYH" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
+	  <div class="card-body">
+            <h5 class="card-title">糯米雞&nbsp&nbsp$138</h5>
+	    <p class="card-text">Steamed Chicken Rice with LotusLeaf Wrap</p>
+	    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_4">
+	    See Detail
+	    </button>
+	  </div>
+	</div>
+	<!--腸粉-->
+	<div class="card">
+	  <img src="https://drive.google.com/uc?id=1usKlcNSa8rAT2MQfGCHh8ZLERem1NubV" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
+	  <div class="card-body">
+	    <h5 class="card-title">鮮蝦腸粉&nbsp&nbsp$118</h5>
+	    <p class="card-text">Steamed Rice Rolls with Shrimp</p>
+	    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_5">
+	    See Detail
+	    </button>
+	  </div>
+	</div> 
       </div>
     </div>
-    <div class="card-group card-type-center" style="width:1300px">
-      <!--糯米雞-->
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1pqkKVLfZbK2s7KX-N3DIbMaet3uWFHYH" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">糯米雞&nbsp&nbsp$138</h5>
-          <p class="card-text">Steamed Chicken Rice with LotusLeaf Wrap</p>
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_4">
-    See Detail
-  		  </button>
-        </div>
-      </div>
-      <!--腸粉-->
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1usKlcNSa8rAT2MQfGCHh8ZLERem1NubV" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">鮮蝦腸粉&nbsp&nbsp$118</h5>
-          <p class="card-text">Steamed Rice Rolls with Shrimp</p>
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_5">
-    See Detail
-  		  </button>
-        </div>
-      </div> 
-    </div>
+	
     <!-- The Modal_1 -->
     <div class="modal fade" id="myModal_1">
       <div class="modal-dialog">
