--- a/menu.html
+++ b/menu.html
@@ -56,7 +56,7 @@
 	
     <!--card1_steamed-->
     <p class="food-type">蒸點</p>
-    <div class="card-group card-type-center" id="steamed" style="width:1300px">
+    <div class="card-group" id="steamed" style="width:1300px">
       <!--蝦餃-->
       <div class="card">
         <img src="https://drive.google.com/uc?id=1V_4i4lNXRUwgukfbY_B-Btq_JlNd09dE" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
@@ -90,31 +90,27 @@
   		  </button>
         </div>
       </div>
-    </div>
-    <div class="card-type-center">
-      <div class="card-group" style="width:1300px">
-        <!--糯米雞-->
-        <div class="card">
-	  <img src="https://drive.google.com/uc?id=1pqkKVLfZbK2s7KX-N3DIbMaet3uWFHYH" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-	  <div class="card-body">
-            <h5 class="card-title">糯米雞&nbsp&nbsp$138</h5>
-	    <p class="card-text">Steamed Chicken Rice with LotusLeaf Wrap</p>
-	    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_4">
-	    See Detail
-	    </button>
-	  </div>
-	</div>
-	<!--腸粉-->
-	<div class="card">
-	  <img src="https://drive.google.com/uc?id=1usKlcNSa8rAT2MQfGCHh8ZLERem1NubV" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-	  <div class="card-body">
-	    <h5 class="card-title">鮮蝦腸粉&nbsp&nbsp$118</h5>
-	    <p class="card-text">Steamed Rice Rolls with Shrimp</p>
-	    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_5">
-	    See Detail
-	    </button>
-	  </div>
-	</div> 
+      <!--糯米雞-->
+      <div class="card">
+        <img src="https://drive.google.com/uc?id=1pqkKVLfZbK2s7KX-N3DIbMaet3uWFHYH" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
+        <div class="card-body">
+          <h5 class="card-title">糯米雞&nbsp&nbsp$138</h5>
+          <p class="card-text">Steamed Chicken Rice with LotusLeaf Wrap</p>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_4">
+    See Detail
+  		  </button>
+        </div>
+      </div>
+      <!--腸粉-->
+      <div class="card">
+        <img src="https://drive.google.com/uc?id=1usKlcNSa8rAT2MQfGCHh8ZLERem1NubV" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
+        <div class="card-body">
+          <h5 class="card-title">鮮蝦腸粉&nbsp&nbsp$118</h5>
+          <p class="card-text">Steamed Rice Rolls with Shrimp</p>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_5">
+    See Detail
+  		  </button>
+        </div>
       </div>
     </div>
 	
