修改連結-邱建評

--- a/HomepageIndex.html
+++ b/HomepageIndex.html
@@ -20,6 +20,6 @@
     <div class="homepageWord">
         <p>還在想要打什麼</p>
     </div>
-    <img src="C:\Users\陳信維\OneDrive\桌面\WebTeam\dimsum.jpg" alt = "DimSum" width = "40%" style="position:absolute;left:700px;z-index: 2;">
+    <img src="dimsum.jpg" alt = "DimSum" width = "40%" style="position:absolute;left:700px;z-index: 2;">
 </body>
 </html>
