--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,7 @@
               <!--link to other page-->
               <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="Restaurant_Introduction.html">Home</a>
+                  <a class="nav-link" href="HomepageIndex.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="menu.html">Menu</a>
