修改連結，修改文字--邱建評

--- a/contact.html
+++ b/contact.html
@@ -32,18 +32,18 @@
             <div class="collapse navbar-collapse" id="mynavbar">
               <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                  <a class="nav-link ms-1" href="javascript:void(0)">Home</a>
+                  <a class="nav-link ms-1" href="HomepageIndex.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link ms-1" href="index.html">Menu</a>
+                  <a class="nav-link ms-1" href="menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link ms-1" href="javascript:void(0)">About</a>
+                  <a class="nav-link ms-1" href="Restaurant_Introduction.html">About</a>
                 </li>
                   <a class="nav-link ms-1" href="contact.html">News&Contact</a>
                 </li>
               </ul>
-              <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1">LogIn</button>
+              <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1">費用計算</button>
             </div>
           </div>
       </nav>
@@ -96,8 +96,8 @@
               <div class="col-md-8 text-left">
                 <p1><b>你喜歡港式飲茶嗎?</b></p1>
                 <br>
-                <p2><b><br>你好，我是店長Aralia</b></p2> 
-                <p3><b><br>歡迎來九龍飲茶品嘗看看</b></p3>      
+                <p2><b><br>歡迎來到九龍飲茶</b></p2> 
+                <p3><b><br>歷史悠久，來自香港九龍的道地茶餐廳在士林開幕拉</b></p3>      
               </div>
             </div>
           </div>
