--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     	<div class="container-fluid">
         	<!--logo-->
-            <a class="navbar-brand" href="home-page"><img src="https://drive.google.com/uc?id=1ZOz2xB9ujEd49PXrOSA89IJ6Vz8-zRNH" class="rounded-circle" alt="Cinque Terre" width="55" height="55"></a>
+            <a class="navbar-brand"><img src="https://drive.google.com/uc?id=1ZOz2xB9ujEd49PXrOSA89IJ6Vz8-zRNH" class="rounded-circle" alt="Cinque Terre" width="55" height="55"></a>
             <div class="collapse navbar-collapse" id="mynavbar">
               <!--link to other page-->
               <ul class="navbar-nav me-auto">
