--- a/index.html
+++ b/index.html
@@ -1,233 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Menu</title>
-  <meta charset="utf-8">
-  <!--bootstrap link-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-  <link href="Restaurant_Introduction.css" rel="stylesheet">
-</head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 
-<body>
-
-	<!--navbar-->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    	<div class="container-fluid">
-        	<!--logo-->
-            <a class="navbar-brand" href="home-page"><img src="https://drive.google.com/uc?id=1ZOz2xB9ujEd49PXrOSA89IJ6Vz8-zRNH" class="rounded-circle" alt="Cinque Terre" width="55" height="55"></a>
-            <div class="collapse navbar-collapse" id="mynavbar">
-              <!--link to other page-->
-              <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="Restaurant_Introduction.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="menu">Menu</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="news">News</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="Restaurant_Introduction.html">About</a>
-                </li>
-              </ul>
-              <!--search box-->
-              <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder="Search">
-                <button class="btn btn-primary" type="button">Search</button>
-              </form>
-            </div>
-        </div>
-	</nav>
-    <!--dropdowns-->
-    <p></p>
-    <div class="dropdown d-grid">
-      <button type="button" class="btn btn-outline-info dropdown-toggle" data-bs-toggle="dropdown">
-        Dropdown button
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#steamed">蒸點</a></li>
-        <li><a class="dropdown-item" href="#fried">煎、炸、焗、烤</a></li>
-        <li><a class="dropdown-item" href="#riceNnoodle">飯、粥、麵</a></li>
-        <li><a class="dropdown-item" href="#soup">湯品</a></li>
-      </ul>
-  	</div>
-    <!--card1_steamed-->
-    <p class="food-type">蒸點</p>
-    <div class="card-group" id="steamed" style="width:1300px">
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1V_4i4lNXRUwgukfbY_B-Btq_JlNd09dE" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">蝦餃&nbsp&nbsp$128</h5>
-          <p class="card-text">Steamed Shrimp Dumplings</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1N44XG-MLXbJ1lk1OcbeyWsoF-uso8Lt0" class="card-img-top rounded-circle" alt="..." width="140" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">蟹子燒賣&nbsp&nbsp$108</h5>
-          <p class="card-text">Pork Dumplings with Flying Fish Roe</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1iGtxvUtmnbgCyHevsk9jwtgRysmf7O82" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">流沙包&nbsp&nbsp$108</h5>
-          <p class="card-text">Custard Buns</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1pqkKVLfZbK2s7KX-N3DIbMaet3uWFHYH" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">糯米雞&nbsp&nbsp$138</h5>
-          <p class="card-text">Steamed Chicken Rice with LotusLeaf Wrap</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1usKlcNSa8rAT2MQfGCHh8ZLERem1NubV" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">鮮蝦腸粉&nbsp&nbsp$118</h5>
-          <p class="card-text">Steamed Rice Rolls with Shrimp</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-    </div>
-    <!--card2_fried-->
-    <p class="food-type">煎、炸、焗、烤</p>
-    <div class="card-group" id="fried" style="width:1300px">
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1GhVyvuUu8Lkuu93CpGCB8XEIDx1xJyFT" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">金絲龍鬚蝦&nbsp&nbsp$138</h5>
-          <p class="card-text">Fried Noodle Roll with Shrimp</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1y0P-r-A8Xhb-vrUgQ3aTTfQlj9tfG7Le" class="card-img-top rounded-circle" alt="..." width="140" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">明蝦角&nbsp&nbsp$108</h5>
-          <p class="card-text">Fried Shrimp Dumplings</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1aHUQVmf3BUEO4sVaqc8VLFvCe3tJEMwJ" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">咸水角&nbsp&nbsp$118</h5>
-          <p class="card-text">Fried Rice Dumplings</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1g5439zHt6vUe_S68516tqEgmk70i5fNg" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">蘿蔔絲餅&nbsp&nbsp$128</h5>
-          <p class="card-text">Radish Puff Pastry</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1V2jU5Ba30Lli4FnnFaaz01l2eJ60xmKt" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">叉燒酥&nbsp&nbsp$138</h5>
-          <p class="card-text">BBQ Pork Puff</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-    </div>
-    <!--card3_riceNnoodle-->
-    <p class="food-type">飯、粥、麵</p>
-    <div class="card-group" id="riceNnoodle" style="width:1300px">
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1Xm6kaB8GldSps3qjT_p8PTXttQ3grxtQ" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">鳳爪排骨蒸飯&nbsp&nbsp$206</h5>
-          <p class="card-text">Steamed Chicken Feet and Spareribs Rice</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1SJs30kOK5LXElxyBTCiGyYRIXX7lj-Kv" class="card-img-top rounded-circle" alt="..." width="140" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">鼓汁帶子蒸飯&nbsp&nbsp$216</h5>
-          <p class="card-text">Steamed Scallop Rice with Soy Sauce</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1LLHBajQjMqgpIuWYgWkW_twkiTAl3ezi" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">臘味煲仔飯&nbsp&nbsp$336</h5>
-          <p class="card-text">ClayPot Rice with Cantonese Sausage</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1CN8_X-uqKpzeZsGGQVunq7XmUTr00DLV" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">皮蛋瘦肉粥&nbsp&nbsp$276</h5>
-          <p class="card-text">Century Egg Pork Lean Congee</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1NAVKosTun4mtEfclbFTskFW4A9kxSzFT" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">干炒牛河&nbsp&nbsp$238</h5>
-          <p class="card-text">Fried RiceNoodle with Sliced Beef</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-    </div>
-    <!--card4_soup-->
-    <p class="food-type">湯品</p>
-    <div class="card-group" id="soup" style="width:1300px">
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1voRwIJJMu3Y71EAVSE7Q8tmRIdvMLrfw" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">人參雞湯&nbsp&nbsp$189</h5>
-          <p class="card-text">Ginseng Chicken Soup</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1qYFGGM2-VeN5jjub8uIGc29SLjb2Lkmo" class="card-img-top rounded-circle" alt="..." width="140" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">杏仁膠豬靓湯&nbsp&nbsp$189</h5>
-          <p class="card-text">Almond and Pork Soup</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1cH1KSgEdgjTwPdWgCBgQc3OFKbiemaWk" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">竹笙排骨湯&nbsp&nbsp$179</h5>
-          <p class="card-text">PorkRib Soup with Bamboo Fungus</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=182floKnnGC1a2fdguI2wpxMMFviKBhYb" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">海鮮豆腐煲&nbsp&nbsp$276</h5>
-          <p class="card-text">Seafood and Bean Curd in Casserole</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://drive.google.com/uc?id=1_S6GyylKG8_psTWBR5ygQxuDo_uHEvuN" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
-        <div class="card-body">
-          <h5 class="card-title">鮑魚花膠羹湯&nbsp&nbsp$238</h5>
-          <p class="card-text">Abalone and FishMaw Broth</p>
-          <a href="#" class="btn btn-primary">See Detail</a>
-        </div>
-      </div>
-    </div>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     
+    <title>Document</title>
+</head>
+<body>
+    <div class = "homepagePic">
+        <p>九 龍 港 飲</p>
+    </div>
+    <div class="homepageWord">
+        <p>還在想要打什麼</p>
+    </div>
+    <img src="dimsum.jpg" alt = "DimSum" width = "40%" style="position:absolute;left:700px;z-index: 2;">
 </body>
+</html>
