--- a/menu.html
+++ b/menu.html
@@ -34,8 +34,8 @@
               </ul>
               <!--search box-->
               <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder="Search">
-                <button class="btn btn-primary" type="button">Search</button>
+                <input class="form-control" type="search" placeholder="Search">
+                <button class="btn btn-primary" type="search">Search</button>
               </form>
             </div>
         </div>
