修改文字-邱建評

--- a/contact.html
+++ b/contact.html
@@ -87,17 +87,19 @@
       <div class="containter">
         <div class="row">
           <div class="col-md-8 offset-md-2">
-            <h2><b>店長</b></h2>
+            <h2><b>店徽</b></h2>
             <div class="row">
               <div class="col-md-4 text-center">
-                <img src="C:\Users\a4331\OneDrive\桌面\restaurant\ForfunProject.github.io\pic\avatar.jpg" class="img-thumbnail" alt="avatar">
-                <h3><b>Aralia1112</b></h3>
+                <img src="https://drive.google.com/uc?id=1ZOz2xB9ujEd49PXrOSA89IJ6Vz8-zRNH" class="img-thumbnail" alt="avatar">
+                <h3><b></b></h3>
               </div>
               <div class="col-md-8 text-left">
                 <p1><b>你喜歡港式飲茶嗎?</b></p1>
                 <br>
-                <p2><b><br>歡迎來到九龍飲茶</b></p2> 
-                <p3><b><br>歷史悠久，來自香港九龍的道地茶餐廳在士林開幕拉</b></p3>      
+                <p2><b>歷史悠久，來自香港九龍的道地茶餐廳在士林開幕拉</b></p2> 
+                <br>
+                
+          
               </div>
             </div>
           </div>
