--- a/Restaurant_Introduction.html
+++ b/Restaurant_Introduction.html
@@ -19,7 +19,7 @@
               <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                   <li class="nav-item">
-                    <a class="nav-link ms-5" href="HomepageIndex.html">Home</a>
+                    <a class="nav-link ms-5" href="Index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link ms-1" href="menu.html">Menu</a>
@@ -36,14 +36,32 @@
         </nav>
         <div class="mt-5 ms-5 me-5 p-5 bg-primary text-white rounded bg-black opacity-75">
             <h1>我們的故事</h1>
-            <h2>等著瞎掰</h2>
+            <h4>
+              九龍飲茶原店址位於香港九龍，二十世紀初東亞局勢巨變<br>
+              為了躲避戰禍，陳店主攜家帶眷搬至台灣<br>
+              隨後在台北市士林鎮落腳，店名也改成九龍飲茶
+            </h4>
         </div>
         <div class="parallax2 mt-0 ms-5 me-5 border-top border-bottom border-light border-3"></div>
         <div class="mt-0 ms-5 me-5 p-5 bg-primary text-white rounded bg-black opacity-75">
             <h1>我們的故事</h1>
-            <h2>等著瞎掰</h2>
+            <h4>
+              九龍飲茶在台灣的經營一開始並不順利<br>
+              許多食材的取得與運送在台灣沒有管道<br>
+              港式飲茶的飲食方式在台灣也尚未流行<br>
+              創店初期的生意遠不如在香港的日子
+            </h4>
         </div>
-        <div class="parallax3 mt-0 ms-5 me-5 border-top border-light border-3"></div>
+        <div class="parallax3 mt-0 ms-5 me-5 border-top border-light border-3 border-bottom"></div>
+        <div class="mt-0 ms-5 me-5 p-5 bg-primary text-white rounded bg-black opacity-75">
+          <h1>我們的故事</h1>
+          <h4>
+            為了突破困境，陳家開始苦心研究<br>
+            在保留港式特色的同時開始融入台灣在地食材與飲食文化<br>
+            經過了數代傳承，努力終於開花結果<br>
+            九龍飲茶的名氣在全台流傳，成為了在地港式飲茶的龍頭
+          </h4>
+        </div>
      
     </div>
     
