--- a/calculate.html
+++ b/calculate.html
@@ -20,7 +20,7 @@
               <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                   <li class="nav-item">
-                    <a class="nav-link ms-5" href="HomepageIndex.html">Home</a>
+                    <a class="nav-link ms-5" href="Index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link ms-1" href="menu.html">Menu</a>
@@ -35,23 +35,44 @@
               </div>
             </div>
         </nav>
-        <div class="btn-group">
-          <button type="dropdown-header" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" id="dropdown1" aria-expanded="false">
-            蒸點
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdown1">
-            <li><a class="dropdown-item" id="ShrimpDumplings">蝦餃</a></li>
-            <li><a class="dropdown-item" id="CrabRoeSiomai">蟹子燒賣</a></li>
-            <li><a class="dropdown-item" id="CustardBun">流沙包</a></li>
-            <li><a class="dropdown-item" id="StickyRiceChicken">糯米雞</a></li>
-            <li><a class="dropdown-item" id="ShrimpRiceRoll">鮮蝦腸粉</a></li>
+        <div>
+          <select class="p-2 " id="food">
+            <optgroup label="蒸點" class=" text-bg-dark"></optgroup>
+            <option value="128" >蝦餃</option>
+            <option value="108" >蟹子燒賣</option>
+            <option value="108" >流沙包</option>
+            <option value="138" >糯米雞</option>
+            <option value="118" >鮮蝦腸粉</option>
+            <optgroup label="煎、炸、焗、烤" class=" text-bg-dark text"></optgroup>
+            <option value="138" >金絲龍鬚蝦</option>
+            <option value="108" >明蝦角</option>
+            <option value="118" >咸水角</option>
+            <option value="128" >蘿蔔絲餅</option>
+            <option value="138" >叉燒酥</option>
+            <optgroup label="飯、粥、麵" class=" text-bg-dark text"></optgroup>
+            <option value="206" >鳳爪排骨蒸飯</option>
+            <option value="216" >鼓汁帶子蒸飯</option>
+            <option value="336" >臘味煲仔飯</option>
+            <option value="276" >皮蛋瘦肉粥</option>
+            <option value="238" >干炒牛河</option>
+            <optgroup label="湯品" class=" text-bg-dark text"></optgroup>
+            <option value="189" >人參雞湯</option>
+            <option value="189" >杏仁膠豬靓湯</option>
+            <option value="179" >竹笙排骨湯</option>
+            <option value="276" >海鮮豆腐煲</option>
+            <option value="238" >鮑魚花膠羹湯</option>
+
+          </select>
+          <button type="button" class="btn btn-primary" onclick="Order()">確認</button>
+          <a id="tm" class="text-bg-light">0元</a>
+          <ul id="OrderList" class="list-group w-25 text-bg-light">
+            <li>你好</li>
           </ul>
-          <button></button>
         </div>
         
      
     </div>
-    <script src="ForfunProject.github.io\calculate.js"></script>
+    <script src="calculate.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
