--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="mynavbar">
               <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                  <a class="nav-link ms-1" href="HomepageIndex.html">Home</a>
+                  <a class="nav-link ms-1" href="Index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link ms-1" href="menu.html">Menu</a>
