--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
   <!--bootstrap link-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-  <link href="Restaurant_Introduction.css" rel="stylesheet">
+  <link href="menu.css" rel="stylesheet">
 </head>
 
 <body>
