--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,19 @@
   <link href="menu.css" rel="stylesheet">
 </head>
 
+<style>
+  .centercard{
+      display: flex;
+      justify-content: center;
+      align-content: center;
+      flex-wrap: wrap;
+  }
+  .food-type{
+      font-size: 30px;
+      display: flex;
+      justify-content: center;
+  }
+</style>
 
 <body>
 
