修改按鈕文字

--- a/menu.html
+++ b/menu.html
@@ -61,7 +61,7 @@
             <h5 class="card-title">蝦餃&nbsp&nbsp$128</h5>
             <p class="card-text">Steamed Shrimp Dumplings</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_1">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -72,7 +72,7 @@
             <h5 class="card-title">蟹子燒賣&nbsp&nbsp$108</h5>
             <p class="card-text">Pork Dumplings with Flying Fish Roe</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_2">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -83,7 +83,7 @@
             <h5 class="card-title">流沙包&nbsp&nbsp$108</h5>
             <p class="card-text">Custard Buns</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_3">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -100,7 +100,7 @@
             <h5 class="card-title">糯米雞&nbsp&nbsp$138</h5>
             <p class="card-text">Steamed Chicken Rice with LotusLeaf Wrap</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_4">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -111,7 +111,7 @@
             <h5 class="card-title">鮮蝦腸粉&nbsp&nbsp$118</h5>
             <p class="card-text">Steamed Rice Rolls with Shrimp</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_5">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -216,7 +216,7 @@
             <h5 class="card-title">金絲龍鬚蝦&nbsp&nbsp$138</h5>
             <p class="card-text">Fried Noodle Roll with Shrimp</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_6">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -227,7 +227,7 @@
             <h5 class="card-title">明蝦角&nbsp&nbsp$108</h5>
             <p class="card-text">Fried Shrimp Dumplings</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_7">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -238,7 +238,7 @@
             <h5 class="card-title">咸水角&nbsp&nbsp$118</h5>
             <p class="card-text">Fried Rice Dumplings</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_8">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -255,7 +255,7 @@
             <h5 class="card-title">蘿蔔絲餅&nbsp&nbsp$128</h5>
             <p class="card-text">Radish Puff Pastry</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_9">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -266,7 +266,7 @@
             <h5 class="card-title">叉燒酥&nbsp&nbsp$138</h5>
             <p class="card-text">BBQ Pork Puff</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_10">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -374,7 +374,7 @@
             <h5 class="card-title">鳳爪排骨蒸飯&nbsp&nbsp$206</h5>
             <p class="card-text">Steamed Chicken Feet and Spareribs Rice</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_11">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -385,7 +385,7 @@
             <h5 class="card-title">鼓汁帶子蒸飯&nbsp&nbsp$216</h5>
             <p class="card-text">Steamed Scallop Rice with Soy Sauce</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_12">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -396,7 +396,7 @@
             <h5 class="card-title">臘味煲仔飯&nbsp&nbsp$336</h5>
             <p class="card-text">ClayPot Rice with Cantonese Sausage</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_13">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -413,7 +413,7 @@
             <h5 class="card-title">皮蛋瘦肉粥&nbsp&nbsp$276</h5>
             <p class="card-text">Century Egg Pork Lean Congee</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_14">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -424,7 +424,7 @@
             <h5 class="card-title">干炒牛河&nbsp&nbsp$238</h5>
             <p class="card-text">Fried RiceNoodle with Sliced Beef</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_15">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -532,7 +532,7 @@
             <h5 class="card-title">人參雞湯&nbsp&nbsp$189</h5>
             <p class="card-text">Ginseng Chicken Soup</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_16">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -543,7 +543,7 @@
             <h5 class="card-title">杏仁膠豬靓湯&nbsp&nbsp$189</h5>
             <p class="card-text">Almond and Pork Soup</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_17">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -554,7 +554,7 @@
             <h5 class="card-title">竹笙排骨湯&nbsp&nbsp$179</h5>
             <p class="card-text">PorkRib Soup with Bamboo Fungus</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_18">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -571,7 +571,7 @@
             <h5 class="card-title">海鮮豆腐煲&nbsp&nbsp$276</h5>
             <p class="card-text">Seafood and Bean Curd in Casserole</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_19">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
@@ -582,7 +582,7 @@
             <h5 class="card-title">鮑魚花膠羹湯&nbsp&nbsp$238</h5>
             <p class="card-text">Abalone and FishMaw Broth</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal_20">
-      See Detail
+      產品資訊
             </button>
           </div>
         </div>
