終於成功了QQ

--- a/calculate.html
+++ b/calculate.html
@@ -63,7 +63,7 @@
             <option value="238" >鮑魚花膠羹湯</option>
 
           </select>
-          <button type="button" class="btn btn-primary" onclick="Order()">確認</button>
+          <button type="button" class="btn btn-primary" onclick="Order();ShowText(this)" >確認</button>
           <a id="tm" class="text-bg-light">0元</a>
           <ul id="OrderList" class="list-group w-25 text-bg-light">
             <li>你好</li>
