--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
 
   
-  <body background="C:\Users\a4331\OneDrive\桌面\restaurant\ForfunProject.github.io\pic\contact-1.jpg">
+  <body background="pic\contact-1.jpg">
     <div class="parallax p-5" >
       <nav class="navbar navbar-expand-sm navbar-dark bg-dark mt-10 ms-5 me-5 p-4">
           <div class="container-fluid">
@@ -48,25 +48,7 @@
           </div>
       </nav>
       
-      <!-- <div style="height:1300px; width:960px">
-        <div class="article section1">
-          travel<br>
-          travel<br>
-          travel
-        </div>
-        <div class="article section2">
-          travel2<br>
-          travel2<br>
-          travel2
-        </div>
-        <div class="article section3">
-          travel3<br>
-          travel3<br>
-          travel3
-        </div>
-      </div> -->
-
-
+  
     <section id="intro">
       <div class="jumbotron">
         <div class="container">
@@ -75,7 +57,7 @@
               <h1><b>九龍飲茶</b></h1>
               <p4><b>全台最道地的港式飲茶餐廳</b></p4>
               <br>
-              <button type="button" class="btn btn-primary">加入我們</button>
+              <a class="nav-link ms-1" href="join_us.html"><b>加入我們</b></a>
               </div>
           </div>
         </div>
