終於成功了2

--- a/calculate.html
+++ b/calculate.html
@@ -65,8 +65,8 @@
           </select>
           <button type="button" class="btn btn-primary" onclick="Order();ShowText(this)" >確認</button>
           <a id="tm" class="text-bg-light">0元</a>
-          <ul id="OrderList" class="list-group w-25 text-bg-light">
-            <li>你好</li>
+          <ul id="OrderList" class="list-group w-25 text-bg-light  list-unstyled">
+            <li class="text-bg text-light ">餐點明細</li>
           </ul>
         </div>
         
