--- a/join_us.html
+++ b/join_us.html
@@ -48,7 +48,7 @@
         <div class="containter">
           <div class="row">
             <div class="col-md-8 offset-md-2">
-              <div style="color: blue;">
+              <div style="color: rgb(152, 169, 84);">
                 <div class="mb-3">
                   <label for="exampleFormControlInput1" class="form-label"><b>電子信箱</b></label>
                   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -66,7 +66,7 @@
         <div class="containter">
           <div class="row">
             <div class="col-md-8 offset-md-2">
-              <div style="color: blue;">
+              <div style="color: rgb(152, 169, 84);">
                 <h2><b>招募資訊</b></h2>
                 <ul><br><b>廚師 2人</b></ul>
                 <li><b>薪資: 40000</b></li>
