--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link ms-5" href="HomepageIndex.html">Home</a>
+                <a class="nav-link ms-5" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link ms-1" href="menu.html">Menu</a>
@@ -42,13 +42,14 @@
     </nav>
   </div>
   <div class="row">
-    <div class = "word2 col-md-8">
-      <h1>使用最道地的食材還原香港特色</h1>
+    <div class = "col-md-8 ">
+      <h1 class="word2">使用最道地的食材還原香港特色</h1>
+      <p>以平價享用美味港點</p>
     </div>
-    <div class = "word1 col-md-4 ">
-        <h2>九 龍 港 飲</h2>
+    <div class = "col-md-4 ">
+        <h2 class="word1">九 龍 飲 茶</h2>
         <div class="pic row col-md-12 ">
-          <img src="pic\dimsum.jpg" alt = "DimSum" >
+          <img src="pic\dimsum.jpg" alt = "DimSum">
         </div>
     </div>
   </div>
