--- a/menu.html
+++ b/menu.html
@@ -37,7 +37,7 @@
                   <a class="nav-link" href="contact.html">News&Contact</a>
                 </li>
               </ul>
-	      <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1" hreh="calculate.html">費用計算</button>
+	      <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1" href="calculate.html">費用計算</button>
             </div>
         </div>
 	</nav>
