加入人均計算

--- a/Restaurant_Introduction.html
+++ b/Restaurant_Introduction.html
@@ -19,7 +19,7 @@
               <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                   <li class="nav-item">
-                    <a class="nav-link ms-5" href="Index.html">Home</a>
+                    <a class="nav-link ms-5" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link ms-1" href="menu.html">Menu</a>
@@ -30,7 +30,7 @@
                     <a class="nav-link ms-1" href="contact.html">News&Contact</a>
                   </li>
                 </ul>
-                <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1">LogIn</button>
+                <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1" href="calculate.html">費用計算</button>
               </div>
             </div>
         </nav>
