--- a/menu.html
+++ b/menu.html
@@ -37,10 +37,13 @@
                   <a class="nav-link" href="contact.html">News&Contact</a>
                 </li>
               </ul>
-	      <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1" href="calculate.html">費用計算</button>
+		<a href="calculate.html">
+    		  <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1">費用計算</button>
+		</a>
             </div>
+	    </a>
         </div>
-	</nav>
+      </nav>
     <!--dropdowns-->
     <p></p>
     <div class="dropdown d-grid">
