--- a/menu.html
+++ b/menu.html
@@ -44,19 +44,77 @@
 	    </a>
         </div>
       </nav>
-    <!--dropdowns-->
-    <p></p>
-    <div class="dropdown d-grid">
-      <button type="button" class="btn btn-info dropdown-toggle" data-bs-toggle="dropdown">
-        ~按此直達食物分類~
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#steamed">蒸點</a></li>
-        <li><a class="dropdown-item" href="#fried">煎、炸、焗、烤</a></li>
-        <li><a class="dropdown-item" href="#riceNnoodle">飯、粥、麵</a></li>
-        <li><a class="dropdown-item" href="#soup">湯品</a></li>
-      </ul>
+	
+    <!--Dropdowns-->
+    <div class="centercard">
+      <div class="btn-group">  
+        <!--dropdowns_foodType-->
+        <br/><br/>
+        <div class="dropdown d-grid">
+          <button type="button" class="btn btn-info dropdown-toggle" data-bs-toggle="dropdown">
+            ~按此直達食物分類~
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#steamed">蒸點</a></li>
+            <li><a class="dropdown-item" href="#fried">煎、炸、焗、烤</a></li>
+            <li><a class="dropdown-item" href="#riceNnoodle">飯、粥、麵</a></li>
+            <li><a class="dropdown-item" href="#soup">湯品</a></li>
+          </ul>
+        </div>
+        
+        <!--dropdowns_Detail-->
+        <div class="dropdown">
+          <button onclick="myFunction()" class="btn btn-warning dropdown-toggle">~按此查詢產品資訊~</button>
+          <div id="myDropdown" class="dropdown-content">
+            <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+            <a data-bs-toggle="modal" data-bs-target="#myModal_1">蝦餃</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_2">蟹子燒賣</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_3">流沙包</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_4">糯米雞</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_5">鮮蝦腸粉</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_6">金絲龍鬚蝦</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_7">明蝦角</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_8">咸水角</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_9">蘿蔔絲餅</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_10">叉燒酥</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_11">鳳爪排骨蒸飯</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_12">鼓汁帶子蒸飯</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_13">臘味煲仔飯</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_14">皮蛋瘦肉粥</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_15">干炒牛河</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_16">人參雞湯</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_17">杏仁膠豬靓湯</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_18">竹笙排骨湯</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_19">海鮮豆腐煲</a>
+            <a data-bs-toggle="modal" data-bs-target="#myModal_20">鮑魚花膠羹湯</a>
+          </div>
+        </div>
+      </div>
     </div>
+
+<script>
+/* When the user clicks on the button,
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
+
+function filterFunction() {
+  var input, filter, ul, li, a, i;
+  input = document.getElementById("myInput");
+  filter = input.value.toUpperCase();
+  div = document.getElementById("myDropdown");
+  a = div.getElementsByTagName("a");
+  for (i = 0; i < a.length; i++) {
+    txtValue = a[i].textContent || a[i].innerText;
+    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+      a[i].style.display = "";
+    } else {
+      a[i].style.display = "none";
+    }
+  }
+}
+</script>
 	
     <!--card1_steamed-->
     <p class="food-type">蒸點</p>
