food type position change

--- a/menu.html
+++ b/menu.html
@@ -117,9 +117,9 @@ function filterFunction() {
 </script>
 	
     <!--card1_steamed-->
-    <p class="food-type">蒸點</p>
+    <p class="food-type" id="steamed">蒸點</p>
     <div class="centercard">
-      <div class="card-group" id="steamed" style="width:780px">
+      <div class="card-group"  style="width:780px">
         <!--蝦餃-->
         <div class="card">
           <img src="https://drive.google.com/uc?id=1V_4i4lNXRUwgukfbY_B-Btq_JlNd09dE" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
@@ -272,9 +272,9 @@ function filterFunction() {
     </div>
 	
     <!--card2_fried-->
-    <p class="food-type">煎、炸、焗、烤</p>
+    <p class="food-type" id="fried">煎、炸、焗、烤</p>
     <div class="centercard">
-      <div class="card-group" id="fried" style="width:780px">
+      <div class="card-group"  style="width:780px">
         <!--龍鬚蝦-->
         <div class="card">
           <img src="https://drive.google.com/uc?id=1GhVyvuUu8Lkuu93CpGCB8XEIDx1xJyFT" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
@@ -430,9 +430,9 @@ function filterFunction() {
     </div>
 	
     <!--card3_riceNnoodle-->
-    <p class="food-type">飯、粥、麵</p>
+    <p class="food-type" id="riceNnoodle">飯、粥、麵</p>
     <div class="centercard">
-      <div class="card-group" id="riceNnoodle" style="width:780px">
+      <div class="card-group"  style="width:780px">
         <!--鳳爪排骨蒸飯-->
         <div class="card">
           <img src="https://drive.google.com/uc?id=1Xm6kaB8GldSps3qjT_p8PTXttQ3grxtQ" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
@@ -588,9 +588,9 @@ function filterFunction() {
     </div>
 	
     <!--card4_soup-->
-    <p class="food-type">湯品</p>
+    <p class="food-type" id="soup">湯品</p>
     <div class="centercard">
-      <div class="card-group" id="soup" style="width:780px">
+      <div class="card-group"  style="width:780px">
         <!--人參雞湯-->
         <div class="card">
           <img src="https://drive.google.com/uc?id=1voRwIJJMu3Y71EAVSE7Q8tmRIdvMLrfw" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
