button style change

--- a/menu.html
+++ b/menu.html
@@ -63,7 +63,7 @@
         </div>
         
         <!--dropdowns_Detail-->
-        <div class="dropdown">
+        <div class="dropdown d-grid">
           <button onclick="myFunction()" class="btn btn-warning dropdown-toggle">~按此查詢產品資訊~</button>
           <div id="myDropdown" class="dropdown-content">
             <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
@@ -119,7 +119,7 @@ function filterFunction() {
     <!--card1_steamed-->
     <p class="food-type" id="steamed">蒸點</p>
     <div class="centercard">
-      <div class="card-group"  style="width:780px">
+      <div class="card-group" style="width:780px">
         <!--蝦餃-->
         <div class="card">
           <img src="https://drive.google.com/uc?id=1V_4i4lNXRUwgukfbY_B-Btq_JlNd09dE" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
@@ -274,7 +274,7 @@ function filterFunction() {
     <!--card2_fried-->
     <p class="food-type" id="fried">煎、炸、焗、烤</p>
     <div class="centercard">
-      <div class="card-group"  style="width:780px">
+      <div class="card-group" style="width:780px">
         <!--龍鬚蝦-->
         <div class="card">
           <img src="https://drive.google.com/uc?id=1GhVyvuUu8Lkuu93CpGCB8XEIDx1xJyFT" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
@@ -432,7 +432,7 @@ function filterFunction() {
     <!--card3_riceNnoodle-->
     <p class="food-type" id="riceNnoodle">飯、粥、麵</p>
     <div class="centercard">
-      <div class="card-group"  style="width:780px">
+      <div class="card-group" style="width:780px">
         <!--鳳爪排骨蒸飯-->
         <div class="card">
           <img src="https://drive.google.com/uc?id=1Xm6kaB8GldSps3qjT_p8PTXttQ3grxtQ" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
@@ -590,7 +590,7 @@ function filterFunction() {
     <!--card4_soup-->
     <p class="food-type" id="soup">湯品</p>
     <div class="centercard">
-      <div class="card-group"  style="width:780px">
+      <div class="card-group" style="width:780px">
         <!--人參雞湯-->
         <div class="card">
           <img src="https://drive.google.com/uc?id=1voRwIJJMu3Y71EAVSE7Q8tmRIdvMLrfw" class="card-img-top rounded-circle" alt="..." width="120" height="280" style="width:100%">
