contact背景修改、join圖片修改

--- a/join_us.html
+++ b/join_us.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="join.css">
    </head>
 
-   <body background="pic\r1.jpg">
+   <body background="pic\22.jpg">
     <div class="parallax p-5" >
       <nav class="navbar navbar-expand-sm navbar-dark bg-dark mt-10 ms-5 me-5 p-4">
           <div class="container-fluid">
@@ -37,7 +37,9 @@
                   <a class="nav-link ms-1" href="contact.html">News&Contact</a>
                 </li>
               </ul>
-              <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1">LogIn</button>
+              <a href="calculate.html">
+                <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1">費用計算</button>
+              </a>
             </div>
           </div>
       </nav>
@@ -48,7 +50,7 @@
         <div class="containter">
           <div class="row">
             <div class="col-md-8 offset-md-2">
-              <div style="color: rgb(152, 169, 84);">
+              <div style="color: rgb(20, 93, 149);">
                 <div class="mb-3">
                   <label for="exampleFormControlInput1" class="form-label"><b>電子信箱</b></label>
                   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -66,7 +68,7 @@
         <div class="containter">
           <div class="row">
             <div class="col-md-8 offset-md-2">
-              <div style="color: rgb(152, 169, 84);">
+              <div style="color: rgb(20, 93, 149);">
                 <h2><b>招募資訊</b></h2>
                 <ul><br><b>廚師 2人</b></ul>
                 <li><b>薪資: 40000</b></li>
