--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                 <a class="nav-link ms-1" href="contact.html">News&Contact</a>
               </li>
             </ul>
-            <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1">LogIn</button>
+            <a href="calculate.html">
+              <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1">費用計算</button>
+            </a>
           </div>
         </div>
     </nav>
