--- a/Restaurant_Introduction.html
+++ b/Restaurant_Introduction.html
@@ -30,7 +30,9 @@
                     <a class="nav-link ms-1" href="contact.html">News&Contact</a>
                   </li>
                 </ul>
-                <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1" href="calculate.html">費用計算</button>
+                <a href="calculate.html">
+                  <button type="button" class="btn btn-dark btn-outline-light btn-lg border-light border-1">費用計算</button>
+                </a>
               </div>
             </div>
         </nav>
