--- a/calculate.html
+++ b/calculate.html
@@ -80,7 +80,7 @@
             <div class="bg-black  p-5 mt-5 ms-5 me-5 bg-opacity-75 col-5">
               <h2 class="text-light fw-bold fs-3 ">成人<input type="number" min="0"  class="ms-2 me-2" id="Adult"  placeholder="請輸入人數" onchange="PeopleCount()">位</h2>
               <h2 class="text-light fw-bold fs-3">兒童<input type="number" min="0"  class="ms-2 me-2" id="Child" placeholder="請輸入人數" onchange="PeopleCount()">位</h2>
-              <h2 class="text-light fw-bold fs-3">總共<input readonly class="ms-2 me-2" min="0" id="TotalPeople"></h2>
+              <h2 class="text-light fw-bold fs-3">總共<input readonly class="ms-2 me-2" min="0" id="TotalPeople">位</h2>
               <button type="button" class="btn btn-primary mt-4 mb-4 " onclick="Cal()">計算</button>
               <div class="col-6">
                 <h2 class="text-light fw-bold fs-3 ">小記<input readonly size="10" value="0" id="count">元</h2>
